@@ -202,7 +202,11 @@
   * Change password handling (2018-009):
     - Change database field to COLLATE utf8_bin to use case sensitiv passwords.
     - Allow all chars.
-    - 
+  * Add upstream Rev. 2977:
+    - Changed agi/agi-VDAD_local_optimize.agi,
+      bin/AST_flush_DBqueue.pl,
+      bin/AST_update_AMI2.pl: Changed to use server-specific
+        cid_channels_recent table.
 
 2.25.25b
   [Jörg Frings-Fürst]
